# hazel

./: Cargo.toml  README.md  run-client.sh  run.sh
crates/capture/: Cargo.toml
crates/capture/src/: main.rs
crates/capture/src/audio/: _mod.rs  capture.rs  decode.rs  encode.rs  mod.rs  noise.rs  playback.rs
crates/capture/src/audio/linux/: capture.rs  mod.rs  playback.rs
crates/capture/src/audio/windows/: capture.rs  mod.rs  playback.rs
crates/capture/src/video/: encode.rs  mod.rs  wrapper.rs
crates/capture/src/video/linux/: mod.rs  screengrab.rs
crates/client/: Cargo.toml
crates/client/src/: assets.rs  gpui_audio.rs  gpui_tokio.rs  main.rs
crates/client/src/components/: animation.rs  chat.rs  chat_state.rs  collapsable_card.rs  context_popover.rs  left_sidebar.rs  mod.rs  streaming_state.rs
crates/client/src/components/left_sidebar/: mod.rs  text_channels.rs  voice_channels.rs
crates/client/src/db/: mod.rs
crates/client/src/db/entity/: registry.rs
crates/client/src/screens/: login.rs  workspace.rs
crates/client/themes/: hazel.json
crates/client_macros/: Cargo.toml
crates/macros/: Cargo.toml
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: client.rs  common.rs  lib.rs  server.rs
crates/rpc/src/models/: auth.rs  common.rs  general.rs  markers.rs  messages.rs  mod.rs  voice.rs
crates/rpc_macros/: Cargo.toml
crates/rpc_macros/src/: lib.rs
crates/server/: Cargo.toml  config.toml
crates/server/src/: config.rs  main.rs
crates/server/src/api/: auth.rs  common.rs  messages.rs  mod.rs  voice.rs
crates/server/src/entity/: message.rs  mod.rs  text_channel.rs  user.rs  voice_channel.rs
crates/server/src/streaming/: mod.rs
crates/streaming_common/: Cargo.toml
crates/streaming_common/src/: lib.rs
macros/src/: lib.rs
src/: assets.rs  gpui_tokio.rs  main.rs
src/components/: button.rs  left_sidear.rs  mod.rs
src/db/: mod.rs
src/screens/: login.rs  workspace.rs
themes/: tokyonight.json
