[package]
name = "hazel_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc = { path = "../hazel-server/rpc" }

# UI
gpui = "0.2.2"
gpui-component = "0.5.0"
rust-embed = "8.9.0"
unicode-segmentation = "1.12.0"

# Async
smol = "2.0.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

anyhow = "1.0.100"
tracing = "0.1.43"
rmp-serde = "1.3.1"

[dependencies.sea-orm]
version = "2.0.0-rc"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "schema-sync", "entity-registry"]
