[workspace]
resolver = "2"
members = [
    "crates/rpc",
    "crates/macros",
    "crates/server",
    "crates/client",
]

default-members = ["crates/client"]

[workspace.dependencies]
rpc = { path = "crates/rpc" }
hazel_macros = { path = "crates/macros" }

log = "0.4.28"
anyhow = "1.0.100"
env_logger = "0.11.8"
rmp-serde = "1.3.1"

[workspace.dependencies.tokio]
version = "1.49.0"
features = [
    "net",
    "io-util",
    "time",
    "sync",
    "rt-multi-thread",
    "macros",
]

[workspace.dependencies.sea-orm]
version = "2.0.0-rc.27"
features = [
    "sqlx-sqlite",
    "entity-registry",
    "schema-sync",
    "runtime-tokio-rustls",
]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]
