[workspace]
resolver = "2"
members = [
    "crates/rpc",
    "crates/rpc_macros",
    "crates/client_macros",
    "crates/server",
    "crates/client",
    "crates/capture", 
    "crates/streaming_common",
]

default-members = ["crates/client"]

[workspace.dependencies]
rpc = { path = "crates/rpc" }

rpc_macros = { path = "crates/rpc_macros" }
client_macros = { path = "crates/client_macros" }

capture = { path = "crates/capture" }
streaming_common = { path = "crates/streaming_common" }

log = "0.4.29"
anyhow = "1.0.100"
env_logger = "0.11.8"
rmp-serde = "1.3.1"
bytes = "1.11.0"
crossbeam = "0.8.4"

[workspace.dependencies.tokio]
version = "1.49.0"
features = [
    "net",
    "io-util",
    "time",
    "sync",
    "rt-multi-thread",
    "macros",
]

[workspace.dependencies.sea-orm]
version = "2.0.0-rc.27"
features = [
    "sqlx-sqlite",
    "entity-registry",
    "schema-sync",
    "runtime-tokio-rustls",
]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]
