[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }

bytes = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }

streaming_common = { workspace = true }

ffmpeg-next = "8.0.0"

nnnoiseless = "0.5.2"

ringbuf = "0.4.8"
thread-priority = "3.0.0"
heapless = "0.9.2"

[target.'cfg(unix)'.dependencies]
libspa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", features = ["v0_3_49"]}

[target.'cfg(windows)'.dependencies]
windows-core = "0.62.2"
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
