[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }

bytes = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
atomic_float = { workspace = true }
ringbuf = { workspace = true }
tokio = { workspace = true }

streaming_common = { workspace = true }

nnnoiseless = "0.5.2"

thread-priority = "3.0.0"
heapless = "0.9.2"
opus = "0.3.1"

rnnoise-sys = { git = "https://github.com/TaPO4eg3D/rnnoise-sys.git" }
ffmpeg-next = "8.0.0"
drm-fourcc = "2.2.0"

[target.'cfg(unix)'.dependencies]
ashpd = { version = "0.13.4", features = ["screencast"] }

libspa = { git = "https://github.com/TaPO4eg3D/pipewire-rs" }
pipewire = { git = "https://github.com/TaPO4eg3D/pipewire-rs", features = ["v0_3_49"]}

[target.'cfg(windows)'.dependencies]
windows-core = "0.62.2"
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
