[package]
name = "hazel_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc = { workspace = true }
hazel_macros = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
sea-orm = { workspace = true }
capture = { workspace = true }
streaming_common = { workspace = true }

# UI
# TODO: Keep it from these forks until this issue is resolved:
# https://github.com/zed-industries/zed/pull/46543
# gpui = "0.2.2"
gpui = { git = "https://github.com/Neulus/zed.git" }
gpui-component = { git = "https://github.com/TaPO4eg3D/gpui-component.git" }

rust-embed = "8.9.0"
unicode-segmentation = "1.12.0"

smol = "2.0.2"
tracing = "0.1.43"
clap = { version = "4.5.54", features = ["derive"] }
