[package]
name = "hazel_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc = { workspace = true }
client_macros = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
sea-orm = { workspace = true }
capture = { workspace = true }
streaming_common = { workspace = true }
bytes = { workspace = true }
atomic_float = { workspace = true }
crossbeam = { workspace = true }

# UI
gpui = { git = "https://github.com/zed-industries/zed", features = [
    "wayland",
    "windows-manifest",
    "x11",
] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features=[
    "font-kit",
    "wayland",
    "x11"
] }

gpui-component = { git = "https://github.com/TaPO4eg3D/gpui-component.git" }

rust-embed = "8.11.0"
unicode-segmentation = "1.12.0"

smol = "2.0.2"
tracing = "0.1.44"
clap = { version = "4.5.60", features = ["derive"] }
