[package]
name = "rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc_macros = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
bytes = "1.11"
rmp-serde = "1.3"
castaway = "0.2"
thiserror = "2.0"
dashmap = "6.1"
uuid = { version = "1.21", features = ["v4"] }
chrono = "0.4.42"
sha2 = "0.10.9"
hmac = "0.12.1"
