[package]
name = "hazel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

tokio = { workspace = true }
sea-orm = { workspace = true }

serde = { workspace = true }
rmp-serde = { workspace = true }

rpc = { workspace = true }

toml = "0.9.7"
bytes = "1.10.1"
dashmap = "6.1.0"
sha2 = "0.10.9"
hmac = "0.12.1"
chrono = "0.4.42"
